add static resources

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -15,8 +15,8 @@
         <div>
             <form method="post" enctype="multipart/form-data">
                 <input type="file" name="file" required>
-                <input type="number" name="width" placeholder="Width" required max=5000 min=1>
-                <input type="number" name="height" placeholder="Height" required max=5000 min=1>
+                <input type="number" name="width" placeholder="Width" required max=5000 min=1 size=6>
+                <input type="number" name="height" placeholder="Height" required max=5000 min=1 size=6>
                 <input type="submit" value="upload">
             </form>
         </div>
